--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "main.h": "c",
-        "opcion.h": "c"
+        "opcion.h": "c",
+        "habilidad.h": "c",
+        "common.h": "c",
+        "personaje.h": "c"
     }
 }
