--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,7 @@
                 "${fileDirname}\\personaje.c",
                 "${fileDirname}\\decision.c",
                 "${fileDirname}\\escenario.c",
+                "${fileDirname}\\habilidad.c",
                 "${fileDirname}\\main.c",
                 "-o",
                 "${fileDirname}\\main.exe"
