--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "opcion.h": "c",
         "habilidad.h": "c",
         "common.h": "c",
-        "personaje.h": "c"
+        "personaje.h": "c",
+        "assert.h": "c",
+        "stdio.h": "c"
     }
 }
