--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
-/* {
+{
+    "C_Cpp.errorSquiggles": "disabled"
+}/* {
     "files.associations": {
         "main.h": "c",
         "opcion.h": "c",
