--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "main.h": "c",
+        "enemigo.h": "c",
+        "escenario.h": "c",
+        "decision.h": "c",
+        "opcion.h": "c",
+        "personaje.h": "c",
+        "turno.h": "c",
+        "combat.h": "c",
+        "common.h": "c",
+        "habilidad.h": "c",
+        "stdio.h": "c"
+    }
 }/* {
     "files.associations": {
         "main.h": "c",
