--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,7 @@
                 "${fileDirname}\\decision.c",
                 "${fileDirname}\\escenario.c",
                 "${fileDirname}\\habilidad.c",
+                "${fileDirname}\\combat.c",
                 "${fileDirname}\\main.c",
                 "-o",
                 "${fileDirname}\\main.exe"
