--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,8 +15,12 @@
                 "${fileDirname}\\decision.c",
                 "${fileDirname}\\escenario.c",
                 "${fileDirname}\\habilidad.c",
-                "${fileDirname}\\turno.c",
+                "${fileDirname}\\combat.c",
                 "${fileDirname}\\main.c",
+                "${fileDirname}\\grafo.c",
+                "${fileDirname}\\turno.c",
+                "${fileDirname}\\movimiento.c",
+
                 "-o",
                 "${fileDirname}\\main.exe"
             ],
